@@ -5,7 +5,9 @@ import gg.generations.rarecandy.renderer.textures.ITexture;
 import org.lwjgl.opengl.GL11C;
 
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 public final class PassChain implements AutoCloseable {
     private final List<FullscreenPass> passes = new ArrayList<>();
@@ -13,25 +15,50 @@ public final class PassChain implements AutoCloseable {
     private final FrameBuffer a;
     private final FrameBuffer b;
 
+    private int width;
+    private int height;
+
+    private final Map<String, FrameBuffer> named = new HashMap<>();
+    private final Map<String, Float> namedScales = new HashMap<>();
+
     public PassChain(int width, int height) {
-        a = createTarget(width, height);
-        b = createTarget(width, height);
+        this.width = Math.max(1, width);
+        this.height = Math.max(1, height);
+
+        a = FrameBuffer.soloAlbedo(this.width, this.height);
+        b = FrameBuffer.soloAlbedo(this.width, this.height);
     }
 
-    private static FrameBuffer createTarget(int width, int height) {
-        return FrameBuffer.builder(width, height)
-                .color(FrameBuffer.TextureSpec.texture2D(ITexture.Type.RGBA16F))
-                .build();
+    private static int scaled(int value, float scale) {
+        return Math.max(1, Math.round(value * scale));
     }
 
     public PassChain add(FullscreenPass pass) {
+        String key = pass.getOutput();
+
+        if (named.containsKey(key)) {
+            throw new IllegalArgumentException("A pass with the key '" + key + "' already exists; each one must be unique.");
+        }
+
+        namedScales.put(key, pass.getScale());
+        named.put(key, FrameBuffer.soloAlbedo(scaled(width, pass.getScale()), scaled(height, pass.getScale())));
+
         passes.add(pass);
         return this;
     }
 
+
     public void resize(int width, int height) {
-        a.resize(width, height);
-        b.resize(width, height);
+        this.width = width;
+        this.height = height;
+
+        a.resize(Math.max(1, width), Math.max(1, height));
+        b.resize(Math.max(1, width), Math.max(1, height));
+
+        named.forEach((key, fb) -> {
+            float scale = namedScales.get(key);
+            fb.resize(scaled(width, scale), scaled(height, scale));
+        });
     }
 
     public void reload() {
@@ -46,21 +73,24 @@ public final class PassChain implements AutoCloseable {
             return;
         }
 
-        // previous starts as the gbuffer, so Source.Previous on the first pass means albedo.
         FrameBuffer previous = gbuffer;
 
-        for (int i = 0; i < active.size() - 1; i++) {
-            FrameBuffer target = (previous == a) ? b : a;
-            active.get(i).render(gbuffer, previous, target);
+        for (var pass : active) {
+            FrameBuffer target = pass.getOutput() != null ? named.get(pass.getOutput()) : previous == a ? b : a;
+
+            pass.render(gbuffer, previous, named, target);
             previous = target;
         }
 
-        active.get(active.size() - 1).renderToScreen(gbuffer, previous, width, height);
+        active.getLast().renderToScreen(gbuffer, previous, named, width, height);
     }
 
     @Override
     public void close() {
+        passes.forEach(FullscreenPass::destroy);
         a.close();
         b.close();
+        named.values().forEach(FrameBuffer::close);
+        named.clear();
     }
 }
